--- a/vuln-app/templates/dashboard.html
+++ b/vuln-app/templates/dashboard.html
@@ -42,7 +42,7 @@
                                 <div class="stat-label">Challenges</div>
                             </div>
                             <div class="stat-item">
-                                <div class="stat-value">{{ loop.index }}</div>
+                                <div class="stat-value">1</div>
                                 <div class="stat-label">Rank</div>
                             </div>
                         </div>
